force-app/main/default/objects/Service_Pricing__c/fields/Base_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Hourly_Rate__c</fullName>
    <label>Base Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>