force-app/main/default/objects/Service_Pricing__c/fields/Weekend_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Surcharge__c</fullName>
    <label>Weekend Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>